# drift

./: .gitignore  CLAUDE.md  LICENSE  Makefile  README.md  cli.sh  install.sh
.github/workflows/: ci.yml
dashboard/: index.html  package-lock.json  package.json  tsconfig.server.json  vite.config.ts
dashboard/server/: index.ts  registry.ts
dashboard/server/routes/: library.ts  projects.ts
dashboard/src/: App.tsx  index.css  types.ts
dashboard/src/components/: SharedUI.tsx  Sidebar.tsx
dashboard/src/data/: api.ts  store.ts
dashboard/src/views/: LibraryBrowser.tsx  ProjectDetail.tsx  ProjectsOverview.tsx
docs/: architecture.md  cli-reference.md  design.md  development.md  library.md
docs/plans/: 2026-03-06-type-and-inline-detection.md
extractor/: eslint.config.js  package-lock.json  package.json
extractor/src/: behaviorMarkers.ts  callGraphAnalyzer.ts  consumerAnalyzer.ts  extract.ts  hookAnalyzer.ts  importAnalyzer.ts  jsxAnalyzer.ts  projectLoader.ts  types.ts  unitExtractor.ts
pipeline/: pyproject.toml
pipeline/src/drift_semantic/: __main__.py  callgraph.py  cluster.py  css_extract.py  css_score.py  depcontext.py  embed.py  fingerprint.py  ingest.py  inspect_cmd.py  io_utils.py  report.py  score.py  search_cmd.py  similarity.py  typesig.py  vectors.py
pipeline/tests/: test_callgraph.py  test_cluster.py  test_css_extract.py  test_css_score.py  test_depcontext.py  test_fingerprint.py  test_score.py  test_similarity.py  test_typesig.py  test_vectors.py
scripts/: _drift_common.py  audit-orchestrate.sh  audit-validate.py  discover.sh  guard-verify.py  library-publish.py  library-pull.py  library-push.py  library-status.py  library-sync.py  merge-audit-partials.py  plan-build.py  plan-update.py  stream-progress.py  unify-orchestrate.sh
skill/drift/: SKILL.md
skill/drift-audit-semantic/: SKILL.md
skill/drift-guard/: SKILL.md
