[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "drift-semantic"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = ["numpy", "scipy", "click", "networkx"]

[project.optional-dependencies]
ollama = ["httpx"]
dev = ["ruff>=0.9.0", "pytest>=8.0"]

[project.scripts]
drift-semantic-pipeline = "drift_semantic.__main__:cli"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
target-version = "py310"
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "N",      # pep8-naming
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "C90",    # mccabe complexity
    "SIM",    # flake8-simplify
    "RUF",    # ruff-specific
    "PLR",    # pylint refactoring
]
ignore = [
    "E501",    # line too long — handled by formatter
    "N803",    # argument-name — G is idiomatic for networkx graphs
    "N806",    # variable-name — G is idiomatic for networkx graphs
]

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.pylint]
max-args = 8

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
